# cookiecutter-templates

./: .bumpversion.cfg  .gitignore  .mdlrc  .mdlstyle.rb  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  Pipfile  README.md  requirements.txt
.chglog/: CHANGELOG.tpl.md  config.yml  release.yml
.common/: .mdlstyle.rb  .pre-commit-config.yaml
.common/.chglog/: CHANGELOG.tpl.md  RELEASE_NOTE.tpl.md  config.yml  release.yml
.common/hooks/: post_gen_project.py
ansible-playbook/: cookiecutter.json
ansible-playbook/{{cookiecutter.project_slug}}/: .chglog  .kitchen.yml  .mdlstyle.rb  .vault  README.md  ansible.cfg  site.yaml
ansible-playbook/{{cookiecutter.project_slug}}/inventory/: hosts.yml
ansible-role/{{cookiecutter.project_slug}}/: .gitignore  Gemfile  LICENSE.txt  README.md
helm/: cookiecutter.json
helm/{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitignore  .helmignore  .mdlrc  .mdlstyle.rb  .pre-commit-config.yaml  Chart.yaml  README.md  kustomization.yaml  values.yaml
python-package/: cookiecutter.json
python-package/{{cookiecutter.project_sname}}/: .bumpversion.cfg  .envrc.template  .envrc.tpl  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
python-package/{{cookiecutter.project_sname}}/src/{{cookiecutter.project_slug}}/: __init__.py
python-package/{{cookiecutter.project_sname}}/src/{{cookiecutter.project_slug}}/cli/: main_cli.py
python-package/{{cookiecutter.project_sname}}/tests/cli/: conftest.py  test_main_cli.py
terraform/: cookiecutter.json
terraform/{{cookiecutter.project_slug}}/: .bumpversion.cfg  .envrc.template  .gitignore  .mdlrc  .pre-commit-config.yaml  .terraform-docs.yml  README.md  main.tf  moved.tf  versions.tf
(+15 files in other folders)
